_sass/_includes/_header.scss
// - - - - - - - - - - - - - - - - - -

// Header + menu

// - - - - - - - - - - - - - - - - - -



// - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - Header

.header {
	padding: 20px 20px;
	background-color: $pretty-pink;
	margin-bottom: 15px;
	border-bottom-left-radius: 5px;
	border-bottom-right-radius: 5px;
	color: $pink-white; //this is for the menu items
	text-align: center;


	.wrap {
		max-width: 100%;

		@include mq(tabletp) {
			//padding: 0 20px;
		}
	}
}

.header__logo {
	display: block;
	width: $logo-width;
	max-width: 80%;

	@include mq(tabletp) {
		float: left;
		max-width: 50%;
	}
}

.header__logo__img {
	width: 100%;
	height: auto;
}

.header__title {
	font-family: $super-title-font;
	font-size: $sitetitle-small;
	font-weight: $sitetitle-weight;
	// letter-spacing: $sitetitle-spacing;
	line-height: 1;
	color: $pink-white;
	text-decoration: none; //i don't know why but it needs this now
	display: block;

	@include mq(mobilep) {
		padding-right: 50px;
	}

	&:hover {
		color: $accent-color;
	}

	@include mq(tabletp) {
		font-size: $sitetitle-medium;
	}

	@include mq(laptop) {
		font-size: $sitetitle-large;
	}
}

.header__desc{
	font-family: $body-font;
	font-size: $p-small * .8;
	line-height: 1.5;
	text-decoration: none; //i don't know why but it needs this now
	font-weight: 300;
}

.headesc__line{
	margin-top: 18px;

}



// - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - Menu

.menu_left, .menu_right {
	text-align: left;
	position: absolute;
	top: 50%;
	@include translate(0,-50%);
}

.menu_left {
	left: 0;
	right: 0;
	color: $overlay-text-color;
	font-family: "Playwrite DE Grund", serif;;
	// font-size: 20px;
	// font-weight: 600;
	// letter-spacing: $grid-item-title-spacing;
}
.menu_right {
	right: 2px;
	@include mq(mobilep){display: none;}
}


.menu__toggle {
	position: absolute;
	z-index: 1002;
	top: 50%;
	right: 20px;
	@include translate(0,-50%);
	cursor: pointer;
	font-size: 15px;
	line-height: 20px;
	color: $pink-white;
	
	@include mq(tabletp) {
		display: none;
	}
}

.menu__toggle__icon {
	float: left;
	position: relative;
	width: 24px;
	height: 20px;
	margin-right: 5%;

	span, span:before, span:after {
		content: '';
		position: absolute;
		top: 8px;
		left: 0;
		width: 100%;
		height: 3px;
		@include transition(all 0.1s);
		background: $pink-white;
	}

	span:before {
		top: -8px;
	}

	span:after {
		top: 8px;
	}
}

.menu--open .menu__toggle__icon {

	span:before, span:after {
		background: $overlay-text-color !important;
	}
		
	span {
		background-color: transparent !important;
	}
	
	span:before,
	span:after {
		top: 0;
	}
	
	span:before {
		@include rotate(45);
	}

	span:after {
		@include rotate(-45);
	}
}

.menu__wrap {
	position: fixed;
	z-index: 1000;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	background: rgba($overlay-background-color,0.95);
	overflow: auto;

	visibility: hidden;
	opacity: 0;
	@include transition(all 0.2s ease-in-out);

	@include mq(tabletp) {
		position: relative;
		background: transparent;
		visibility: visible;
		overflow: visible;
		opacity: 1;
		@include transition(none);
	}
}

.menu--open .menu__wrap {
	visibility: visible;
	opacity: 1;
}

.menu__list {
	list-style: none;
	margin: 0 auto;
	padding: 20px $grid-spacing;
	

	@include mq(tabletp) {
		max-width: none;
		margin: 0;
		padding: 0;
	}
}

.menu__list__item {

	color: $pink-white;
	font-size: $menu-large*1.25;
	font-weight: 500;
	letter-spacing: $grid-item-title-spacing;

	@include mq(tabletp) {
		display: inline-block;
		margin-left: 20px;

		&:first-child {
			margin-left: 0;
		}
	}
}

.menu__list__item__link {
	font-size: $menu-large*1.25;
	font-weight: 500;
	color: $overlay-text-color;
	text-decoration: none; //i don't know why but it needs this now
	font-family: "Playwrite DE Grund", serif;
	padding: 10px 10px 16px;


	&:hover {
		color: $overlay-accent-color;
	}

	@include mq(tabletp) {
		padding: 10px 10px 16px;
		font-size: $menu-medium*1.25;
		//color: $text-dark-color;
		color: $pink-white;


		&:hover {
			color: $accent-color;
		}
	}

	@include mq(laptop) {
		font-size: $menu-large*1.25;
	}
	
	&.active-link {
		color: $overlay-accent-color;

		@include mq(tabletp) {
			color: $accent-color;
		}
	}
}

.menu__button {
	margin-top: 20px;
	padding: 15px 20px 16px;
	font-size: 13px;

	@include mq(tabletp) {
		margin-top: 0;
		padding: 11px 20px 12px;
		font-size: 15px;
	}
}

.buttons--circular {

	.menu__button {
		border-radius: 24px;

		@include mq(tabletl) {
			border-radius: 21px;
		}
	}
}

